# Testing

./: .clang-format  .gitignore  Array.hpp  CMakeLists.txt  CMakePresets.json  DataParsingFunctionc.cpp  DataParsingFunctionc.hpp  DataParsingFunctions.cpp  DataParsingFunctions.hpp  Document.hpp  ErlPacker.cpp  ErlPacker.hpp  Field.hpp  FoundationEntities.hpp  JsonIterator.hpp  JsonIteratorBase.hpp  JsonObject.hpp  JsonSerializer.hpp  JsonValueBase.hpp  Jsonifier.cpp  Jsonifier.hpp  JsonifierResult.hpp  MyBot.cpp  NumberParsingUtils.hpp  Object.hpp  Primitive.hpp  Simd.hpp  StringParsingUtils.hpp  Value.hpp  main.cpp
CMake/: Jsonifier.cmake
Executable/: CMakeLists.txt
Include/: Jsonifier.hpp
Source/: Jsonifier.cpp
Testing/: Testing.h
enc_temp_folder/441c5d8d816e597ad67cf2ac84a5dc6/: Document.hpp
